# coding-agent

./: .env.example  README.md  pyproject.toml
agent/: agent.py  main.py
agent/sandbox/: runner.py
agent/tools/: __init__.py  azure_search.py  blob_storage.py  editor.py  github.py  search.py  shell.py
