[project]
name = "coding-agent"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "openai>=1.0",
    "azure-identity>=1.15.0",
    "azure-search-documents>=11.4.0",
    "azure-storage-blob>=12.0",
    "pypdf>=4.0",
    "httpx>=0.28.1",
    "python-dotenv>=1.2.2",
]

[project.scripts]
coding-agent = "agent.main:main"
